--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,12 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=bob
 spring.datasource.password=P@$$w0rd
 spring.jpa.generate-ddl= true
+spring.thymeleaf.cache=false
+spring.thymeleaf.encoding=utf-8
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.security.user.name=root
+spring.security.user.password=123
+
+
