--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,3 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=bob
-spring.datasource.password=P@$$w0rd
 spring.jpa.generate-ddl= true
 spring.thymeleaf.cache=false
 spring.thymeleaf.encoding=utf-8
@@ -10,5 +6,15 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.security.user.name=root
 spring.security.user.password=123
+spring.jpa.open-in-view=false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=bob
+spring.datasource.password=P@$$w0rd
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.freemarker.expose-request-attributes=true
+
 
 
