--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
-spring.jpa.generate-ddl= true
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=bob
+spring.datasource.password=P@$$w0rd
+spring.jpa.generate-ddl= false
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=validate
+
 spring.thymeleaf.cache=false
 spring.thymeleaf.encoding=utf-8
 spring.thymeleaf.mode=HTML
@@ -6,12 +12,10 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.jpa.open-in-view=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=bob
-spring.datasource.password=P@$$w0rd
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.freemarker.expose-request-attributes=true
 
+spring.datasource.driverClassName=org.postgresql.Driver
+
+spring.freemarker.expose-request-attributes=true
+spring.security.basic.enabled=false
+spring.devtools.livereload.enabled=false
 
