--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,25 @@
 spring:
   jpa:
+    database: postgresql
+    show-sql: false
+    generate-ddl: true
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
         jdbc:
           lob:
             non_contextual_creation: true
   flyway:
     baselineOnMigrate: true
     enabled: false
+
+  datasource:
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: bob
+    password: P@$$w0rd
+    driver-class-name: org.postgresql.Driver
 
 server:
   error:
